--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -10,15 +10,24 @@
     height: 32px;
     border-radius: 5px;
     border: none;
+
     @include mobile() {
         font-size: clamp(9px, 0.348rem + 1.07vw, 12px);
         width: clamp(100px, 2.464rem + 18.93vw, 153px);
     }
+    
     &_main {
         width: clamp(200px, 9.379rem + 15.61vw, 303px);
         height: 54px;
         font-size: clamp(13px, 0.722rem + 0.45vw, 16px);
         margin-top: 66px;
     }
-
+    
+    
+    &_submit {
+        font-size: 16px;
+        width: 100%;
+        height: 55px;
+        color: #fff;
+    }
 }
