create section catalog

--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -30,4 +30,10 @@
         height: 55px;
         color: #fff;
     }
+
+    &-mini {
+        width: 131px;
+        height: 40px;
+        font-size: 14px;
+    }
 }
