--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -41,6 +41,9 @@
 
     &__content {
         margin-top: 60px;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
     }
 
     &-item {
@@ -48,6 +51,8 @@
         min-height: 440px;
         border: 2px solid #e8e8e8;
         padding: 20px 20px 26px 20px;
+        overflow: hidden;
+        margin-bottom: 20px;
         &__img {
             display: block;
             margin: 0 auto;
@@ -109,6 +114,73 @@
             font-size: 20px;
             line-height: 100%;
             color: #050505;
+        }
+
+        &__wrapper {
+            display: flex;
+            width: calc(200% + 40px);
+        }
+
+        &__content {
+            width: 50%;
+            margin-right: 0px;
+            transform: translateX(-100%);
+            transition: all 0.5s;
+            &_active {
+                transform: translateX(0%);
+                margin-right: 20px;
+            }
+        }
+
+        &__list {
+            position: relative;
+            width: 50%;
+            margin-left: 20px;
+            transform: translateX(0%);
+            padding-right: 20px;
+            transition: all 0.5s;
+            padding-left: 19px;
+            margin-bottom: 0px;
+            list-style-type: none;
+
+            &_active {
+                transform: translateX(-100%);
+                margin-left: 0px;
+            }
+
+            li {
+                position: relative;
+                font-weight: 300;
+                font-size: 14px;
+                line-height: 150%;
+                color: #555;
+                margin-bottom: 20px;
+                &::before {
+                    content: '';
+                    position: absolute;
+                    width: 5px;
+                    height: 5px;
+                    background-color: #c70101;
+                    left: -14px;
+                    top: 7px;
+                }
+            }
+
+            &__back {
+                position: absolute;
+                bottom: 0;
+                left: 50%;
+                transform: translateX(calc(-50% -19px));
+                display: block;
+                font-weight: 500;
+                font-size: 14px;
+                line-height: 100%;
+                text-decoration: underline;
+                text-decoration-skip-ink: none;
+                text-transform: uppercase;
+                text-align: center;
+                color: #c70101;
+            }
         }
     }
 }
