--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -170,7 +170,7 @@
                 position: absolute;
                 bottom: 0;
                 left: 50%;
-                transform: translateX(calc(-50% -19px));
+                transform: translateX(calc(-50% - 19px));
                 display: block;
                 font-weight: 500;
                 font-size: 14px;
