--- a/src/sass/base/_mixins.scss
+++ b/src/sass/base/_mixins.scss
@@ -10,6 +10,12 @@
     }
 }
 
+@mixin tablet-catalog {
+    @media(max-width: 730px) {
+        @content;
+    }
+}
+
 
 @mixin mobile {
     @media(max-width: 629px) {
