add animnations in css and add lib wow and animate.css

--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -49,6 +49,15 @@
             color: #FF0000;
         }
     }
+
+    &__icon {
+        &_animated {
+            animation: heartbeat 1.5s ease infinite;
+            &:hover {
+                animation-play-state: paused;
+            }
+        }
+    }
 }
 
 
